--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,25 +4,43 @@
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:hardwareAccelerated="false"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".v4PieChartView.PieChartActivity"/>
-        <activity android:name=".v1MobileCoordinates.MobileCoordinatesActivity"/>
-        <activity android:name=".v2BaseCustormView.BaseViewActivity"/>
-        <activity android:name=".v3AnimalCustormView.AnimalCustormViewActivity"/>
-        <activity android:name=".v5Canvas.CanvasActivity"/>
-        <activity android:name=".v6DrawPictureAndText.DrawPictureActivity"/>
-        <activity android:name=".v7EditTextNum.EditTextNumActivity"/>
-        <activity android:name=".v8GAStudioLeafLoadingDemo.CustormLoadingActivty"/>
+        <activity
+            android:name=".v4PieChartView.PieChartActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".v1MobileCoordinates.MobileCoordinatesActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".v2BaseCustormView.BaseViewActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".v3AnimalCustormView.AnimalCustormViewActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".v5Canvas.CanvasActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".v6DrawPictureAndText.DrawPictureActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".v7EditTextNum.EditTextNumActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".v8GAStudioLeafLoadingDemo.CustormLoadingActivty"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
