--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,9 @@
         <activity
             android:name=".v8GAStudioLeafLoadingDemo.CustormLoadingActivty"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".TextViewActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
