Learn Canvas Path

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,9 @@
         <activity
             android:name=".TextViewActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".v10CanvasPath.CanvasPathActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
