贝尔曲线的简单学习

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,10 @@
         <activity
             android:name=".v10CanvasPath.CanvasPathActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".v11BezierOfPath.CanvasBeziarActivity"
+            android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
